SDKs/twilio.com/twilio_messaging_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateAlphaSenderRequest req = new CreateAlphaSenderRequest() {{
                security = new CreateAlphaSenderSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateAlphaSenderPathParams() {{
                    serviceSid = "sed";
                }};
                request = new CreateAlphaSenderCreateAlphaSenderRequest() {{
                    alphaSender = "voluptates";
                }};
            }};

            CreateAlphaSenderResponse res = sdk.createAlphaSender(req);

            if (res.messagingV1ServiceAlphaSender.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createAlphaSender`
* `createBrandRegistrations`
* `createBrandVetting`
* `createExternalCampaign`
* `createPhoneNumber`
* `createService`
* `createShortCode`
* `createTollfreeVerification`
* `createUsAppToPerson`
* `deleteAlphaSender`
* `deleteDomainCertV4`
* `deletePhoneNumber`
* `deleteService`
* `deleteShortCode`
* `deleteUsAppToPerson`
* `fetchAlphaSender`
* `fetchBrandRegistrations`
* `fetchBrandVetting`
* `fetchDeactivation` - Fetch a list of all United States numbers that have been deactivated on a specific date.
* `fetchDomainCertV4`
* `fetchDomainConfig`
* `fetchPhoneNumber`
* `fetchService`
* `fetchShortCode`
* `fetchTollfreeVerification`
* `fetchUsAppToPerson`
* `fetchUsAppToPersonUsecase`
* `fetchUsecase`
* `listAlphaSender`
* `listBrandRegistrations`
* `listBrandVetting`
* `listPhoneNumber`
* `listService`
* `listShortCode`
* `listTollfreeVerification`
* `listUsAppToPerson`
* `updateBrandRegistrations`
* `updateDomainCertV4`
* `updateDomainConfig`
* `updateService`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
